@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2012 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 
 /*
  * @author Eugene Zhuravlev
@@ -20,47 +6,50 @@
 package com.intellij.compiler;
 
 import com.intellij.openapi.components.*;
+import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.project.Project;
+import com.intellij.openapi.util.registry.Registry;
 import com.intellij.util.xmlb.XmlSerializerUtil;
+import org.jetbrains.annotations.NotNull;
 
-@State(
-  name = "CompilerWorkspaceConfiguration",
-  storages = {
-    @Storage(
-      file = StoragePathMacros.WORKSPACE_FILE
-    )}
-)
+@State(name = "CompilerWorkspaceConfiguration", storages = @Storage(StoragePathMacros.WORKSPACE_FILE))
 public class CompilerWorkspaceConfiguration implements PersistentStateComponent<CompilerWorkspaceConfiguration> {
-  public static final int DEFAULT_COMPILE_PROCESS_HEAP_SIZE = 700;
-  public static final String DEFAULT_COMPILE_PROCESS_VM_OPTIONS = "-ea -XX:+UseConcMarkSweepGC";
+  private static final Logger LOG = Logger.getInstance("#com.intellij.compiler.CompilerWorkspaceConfiguration");
+
+  static {
+    LOG.info("Available processors: " + Runtime.getRuntime().availableProcessors());
+  }
 
   public boolean AUTO_SHOW_ERRORS_IN_EDITOR = true;
+  public boolean DISPLAY_NOTIFICATION_POPUP = true;
   @Deprecated public boolean CLOSE_MESSAGE_VIEW_IF_SUCCESS = true;
   public boolean CLEAR_OUTPUT_DIRECTORY = true;
-  public boolean USE_COMPILE_SERVER = true;
-  public boolean MAKE_PROJECT_ON_SAVE = true;
+  public boolean MAKE_PROJECT_ON_SAVE = false; // until we fix problems with several open projects (IDEA-104064), daemon slowness (IDEA-104666)
   public boolean PARALLEL_COMPILATION = false;
-  public int COMPILER_PROCESS_HEAP_SIZE = DEFAULT_COMPILE_PROCESS_HEAP_SIZE;
-  public String COMPILER_PROCESS_ADDITIONAL_VM_OPTIONS = DEFAULT_COMPILE_PROCESS_VM_OPTIONS;
+  /**
+   * @Deprecated. Use corresponding value from CompilerConfiguration
+   * This field is left here for compatibility with older projects
+   */
+  public int COMPILER_PROCESS_HEAP_SIZE = 700;
+  public String COMPILER_PROCESS_ADDITIONAL_VM_OPTIONS = "";
   public boolean REBUILD_ON_DEPENDENCY_CHANGE = true;
+  public boolean COMPILE_AFFECTED_UNLOADED_MODULES_BEFORE_COMMIT = true;
 
   public static CompilerWorkspaceConfiguration getInstance(Project project) {
     return ServiceManager.getService(project, CompilerWorkspaceConfiguration.class);
   }
 
+  @Override
   public CompilerWorkspaceConfiguration getState() {
     return this;
   }
 
-  public void loadState(CompilerWorkspaceConfiguration state) {
+  @Override
+  public void loadState(@NotNull CompilerWorkspaceConfiguration state) {
     XmlSerializerUtil.copyBean(state, this);
   }
 
-  public boolean useOutOfProcessBuild() {
-    return USE_COMPILE_SERVER;
-  }
-
   public boolean allowAutoMakeWhileRunningApplication() {
-    return false;/*ALLOW_AUTOMAKE_WHILE_RUNNING_APPLICATION*/
+    return Registry.is("compiler.automake.allow.when.app.running", false);/*ALLOW_AUTOMAKE_WHILE_RUNNING_APPLICATION*/
   }
 }
