@@ -1,159 +1,160 @@
-/*
- * Copyright 2000-2012 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.fileEditor.impl;
 
 import com.intellij.ide.ui.UISettings;
-import com.intellij.openapi.command.CommandAdapter;
+import com.intellij.openapi.Disposable;
+import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.command.CommandEvent;
 import com.intellij.openapi.command.CommandListener;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.command.impl.CommandMerger;
-import com.intellij.openapi.components.*;
+import com.intellij.openapi.components.PersistentStateComponent;
+import com.intellij.openapi.components.State;
+import com.intellij.openapi.components.Storage;
 import com.intellij.openapi.components.StoragePathMacros;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.EditorFactory;
-import com.intellij.openapi.editor.event.*;
+import com.intellij.openapi.editor.event.CaretEvent;
+import com.intellij.openapi.editor.event.DocumentEvent;
+import com.intellij.openapi.editor.event.EditorEventListener;
+import com.intellij.openapi.editor.event.EditorEventMulticaster;
 import com.intellij.openapi.fileEditor.*;
 import com.intellij.openapi.fileEditor.ex.FileEditorManagerEx;
+import com.intellij.openapi.fileEditor.ex.FileEditorWithProvider;
 import com.intellij.openapi.fileEditor.ex.IdeDocumentHistory;
+import com.intellij.openapi.fileEditor.impl.text.TextEditorProvider;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Pair;
-import com.intellij.openapi.vfs.*;
+import com.intellij.openapi.util.registry.Registry;
+import com.intellij.openapi.vfs.LocalFileSystem;
+import com.intellij.openapi.vfs.VfsUtilCore;
+import com.intellij.openapi.vfs.VirtualFile;
+import com.intellij.openapi.vfs.VirtualFileManager;
+import com.intellij.openapi.vfs.newvfs.BulkFileListener;
+import com.intellij.openapi.vfs.newvfs.events.VFileDeleteEvent;
+import com.intellij.openapi.vfs.newvfs.events.VFileEvent;
 import com.intellij.openapi.wm.ToolWindowManager;
-import com.intellij.util.xmlb.annotations.Transient;
+import com.intellij.psi.ExternalChangeAction;
+import com.intellij.testFramework.LightVirtualFile;
+import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.messages.MessageBus;
+import com.intellij.util.messages.MessageBusConnection;
+import com.intellij.util.messages.Topic;
 import gnu.trove.THashSet;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.TestOnly;
 
+import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
 import java.util.*;
 
-@State(
-    name = "IdeDocumentHistory",
-    storages = {@Storage( file = StoragePathMacros.WORKSPACE_FILE)}
-)
-public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements ProjectComponent, PersistentStateComponent<IdeDocumentHistoryImpl.RecentlyChangedFilesState> {
-  private static final Logger LOG = Logger.getInstance("#com.intellij.openapi.fileEditor.impl.IdeDocumentHistoryImpl");
+@State(name = "IdeDocumentHistory", storages = @Storage(StoragePathMacros.WORKSPACE_FILE))
+public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Disposable, PersistentStateComponent<IdeDocumentHistoryImpl.RecentlyChangedFilesState> {
+  private static final Logger LOG = Logger.getInstance(IdeDocumentHistoryImpl.class);
 
-  private static final int BACK_QUEUE_LIMIT = 25;
-  private static final int CHANGE_QUEUE_LIMIT = 25;
+  private static final int BACK_QUEUE_LIMIT = Registry.intValue("editor.navigation.history.stack.size");
+  private static final int CHANGE_QUEUE_LIMIT = Registry.intValue("editor.navigation.history.stack.size");
 
   private final Project myProject;
 
-  private final EditorFactory myEditorFactory;
   private FileDocumentManager myFileDocumentManager;
-  private final FileEditorManagerEx myEditorManager;
-  private final VirtualFileManager myVfManager;
-  private final CommandProcessor myCmdProcessor;
-  private final ToolWindowManager myToolWindowManager;
+  private FileEditorManagerEx myFileEditorManager;
 
-  private final LinkedList<PlaceInfo> myBackPlaces = new LinkedList<PlaceInfo>(); // LinkedList of PlaceInfo's
-  private final LinkedList<PlaceInfo> myForwardPlaces = new LinkedList<PlaceInfo>(); // LinkedList of PlaceInfo's
-  private boolean myBackInProgress = false;
-  private boolean myForwardInProgress = false;
-  private Object myLastGroupId = null;
+  private final LinkedList<PlaceInfo> myBackPlaces = new LinkedList<>(); // LinkedList of PlaceInfo's
+  private final LinkedList<PlaceInfo> myForwardPlaces = new LinkedList<>(); // LinkedList of PlaceInfo's
+  private boolean myBackInProgress;
+  private boolean myForwardInProgress;
+  private Object myLastGroupId;
+  private boolean myRegisteredBackPlaceInLastGroup;
 
   // change's navigation
-  private final LinkedList<PlaceInfo> myChangePlaces = new LinkedList<PlaceInfo>(); // LinkedList of PlaceInfo's
-  private int myStartIndex = 0;
-  private int myCurrentIndex = 0;
-  private PlaceInfo myCurrentChangePlace = null;
+  private final LinkedList<PlaceInfo> myChangePlaces = new LinkedList<>(); // LinkedList of PlaceInfo's
+  private int myCurrentIndex;
 
-  private PlaceInfo myCommandStartPlace = null;
-  private boolean myCurrentCommandIsNavigation = false;
-  private boolean myCurrentCommandHasChanges = false;
-  private final Set<VirtualFile> myChangedFilesInCurrentCommand = new THashSet<VirtualFile>();
-  private boolean myCurrentCommandHasMoves = false;
-
-  private final CommandListener myCommandListener = new CommandAdapter() {
-    @Override
-    public void commandStarted(CommandEvent event) {
-      onCommandStarted();
-    }
-
-    @Override
-    public void commandFinished(CommandEvent event) {
-      onCommandFinished(event.getCommandGroupId());
-    }
-  };
+  private PlaceInfo myCommandStartPlace;
+  private boolean myCurrentCommandIsNavigation;
+  private boolean myCurrentCommandHasChanges;
+  private final Set<VirtualFile> myChangedFilesInCurrentCommand = new THashSet<>();
+  private boolean myCurrentCommandHasMoves;
 
   private RecentlyChangedFilesState myRecentlyChangedFiles = new RecentlyChangedFilesState();
 
-  public IdeDocumentHistoryImpl(@NotNull Project project,
-                                @NotNull EditorFactory editorFactory,
-                                @NotNull FileEditorManager editorManager,
-                                @NotNull VirtualFileManager vfManager,
-                                @NotNull CommandProcessor cmdProcessor,
-                                @NotNull ToolWindowManager toolWindowManager) {
+  public IdeDocumentHistoryImpl(@NotNull Project project, @NotNull FileEditorManagerEx fileEditorManager) {
     myProject = project;
-    myEditorFactory = editorFactory;
-    myEditorManager = (FileEditorManagerEx)editorManager;
-    myVfManager = vfManager;
-    myCmdProcessor = cmdProcessor;
-    myToolWindowManager = toolWindowManager;
-  }
+    myFileEditorManager = fileEditorManager;
 
-  @Override
-  public final void projectOpened() {
-    EditorEventMulticaster eventMulticaster = myEditorFactory.getEventMulticaster();
-
-    DocumentListener documentListener = new DocumentAdapter() {
+    MessageBusConnection busConnection = project.getMessageBus().connect(this);
+    busConnection.subscribe(FileEditorManagerListener.FILE_EDITOR_MANAGER, new FileEditorManagerListener() {
       @Override
-      public void documentChanged(DocumentEvent e) {
-        onDocumentChanged(e);
-      }
-    };
-    eventMulticaster.addDocumentListener(documentListener, myProject);
-
-    CaretListener caretListener = new CaretListener() {
-      @Override
-      public void caretPositionChanged(CaretEvent e) {
-        onCaretPositionChanged(e);
-      }
-    };
-    eventMulticaster.addCaretListener(caretListener,myProject);
-
-    myProject.getMessageBus().connect().subscribe(FileEditorManagerListener.FILE_EDITOR_MANAGER, new FileEditorManagerAdapter() {
-      @Override
-      public void selectionChanged(FileEditorManagerEvent e) {
+      public void selectionChanged(@NotNull FileEditorManagerEvent e) {
         onSelectionChanged();
       }
     });
-
-    VirtualFileListener fileListener = new VirtualFileAdapter() {
+    busConnection.subscribe(VirtualFileManager.VFS_CHANGES, new BulkFileListener() {
       @Override
-      public void fileDeleted(VirtualFileEvent event) {
-        onFileDeleted();
+      public void after(@NotNull List<? extends VFileEvent> events) {
+        for (VFileEvent event : events) {
+          if (event instanceof VFileDeleteEvent) {
+            removeInvalidFilesFromStacks();
+            return;
+          }
+        }
+      }
+    });
+    busConnection.subscribe(CommandListener.TOPIC, new CommandListener() {
+      @Override
+      public void commandStarted(@NotNull CommandEvent event) {
+        onCommandStarted();
+      }
+
+      @Override
+      public void commandFinished(@NotNull CommandEvent event) {
+        onCommandFinished(event.getProject(), event.getCommandGroupId());
+      }
+    });
+
+    EditorEventListener listener = new EditorEventListener() {
+      @Override
+      public void documentChanged(@NotNull DocumentEvent e) {
+        Document document = e.getDocument();
+        final VirtualFile file = getFileDocumentManager().getFile(document);
+        if (file != null && !(file instanceof LightVirtualFile) && !ApplicationManager.getApplication().hasWriteAction(ExternalChangeAction.class)) {
+          if (!ApplicationManager.getApplication().isDispatchThread()) {
+            LOG.error("Document update for physical file not in EDT: " + file);
+          }
+          myCurrentCommandHasChanges = true;
+          myChangedFilesInCurrentCommand.add(file);
+        }
+      }
+
+      @Override
+      public void caretPositionChanged(@NotNull CaretEvent e) {
+        if (e.getOldPosition().line == e.getNewPosition().line) {
+          return;
+        }
+
+        Document document = e.getEditor().getDocument();
+        if (getFileDocumentManager().getFile(document) != null) {
+          myCurrentCommandHasMoves = true;
+        }
       }
     };
-    myVfManager.addVirtualFileListener(fileListener,myProject);
-    myCmdProcessor.addCommandListener(myCommandListener,myProject);
+    //busConnection.subscribe(EditorEventListener.TOPIC, listener);
+    EditorEventMulticaster multicaster = EditorFactory.getInstance().getEventMulticaster();
+    multicaster.addDocumentListener(listener, this);
+    multicaster.addCaretListener(listener, this);
+  }
+
+  @TestOnly
+  public void setFileEditorManager(@NotNull FileEditorManagerEx value) {
+    myFileEditorManager = value;
   }
 
   public static class RecentlyChangedFilesState {
-    @Transient private List<String> CHANGED_PATHS = new ArrayList<String>();
-
-    public List<String> getChangedFiles() {
-      return CHANGED_PATHS;
-    }
-
-    public void setChangedFiles(List<String> changed) {
-      CHANGED_PATHS = changed;
-    }
+    // don't make it private, see: IDEA-130363 Recently Edited Files list should survive restart
+    @SuppressWarnings("WeakerAccess") public List<String> CHANGED_PATHS = new ArrayList<>();
 
     public void register(VirtualFile file) {
       final String path = file.getPath();
@@ -162,9 +163,9 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
       trimToSize();
     }
 
-    private void trimToSize(){
-      final int limit = UISettings.getInstance().RECENT_FILES_LIMIT + 1;
-      while(CHANGED_PATHS.size()>limit){
+    private void trimToSize() {
+      final int limit = UISettings.getInstance().getRecentFilesLimit() + 1;
+      while (CHANGED_PATHS.size() > limit) {
         CHANGED_PATHS.remove(0);
       }
     }
@@ -176,12 +177,8 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   }
 
   @Override
-  public void loadState(RecentlyChangedFilesState state) {
+  public void loadState(@NotNull RecentlyChangedFilesState state) {
     myRecentlyChangedFiles = state;
-  }
-
-  public final void onFileDeleted() {
-    removeInvalidFilesFromStacks();
   }
 
   public final void onSelectionChanged() {
@@ -189,24 +186,7 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     myCurrentCommandHasMoves = true;
   }
 
-  private void onCaretPositionChanged(CaretEvent e) {
-    if (e.getOldPosition().line == e.getNewPosition().line) return;
-    Document document = e.getEditor().getDocument();
-    if (getFileDocumentManager().getFile(document) != null) {
-      myCurrentCommandHasMoves = true;
-    }
-  }
-
-  private void onDocumentChanged(DocumentEvent e) {
-    Document document = e.getDocument();
-    final VirtualFile file = getFileDocumentManager().getFile(document);
-    if (file != null) {
-      myCurrentCommandHasChanges = true;
-      myChangedFilesInCurrentCommand.add(file);
-    }
-  }
-
-  public final void onCommandStarted() {
+  final void onCommandStarted() {
     myCommandStartPlace = getCurrentPlaceInfo();
     myCurrentCommandIsNavigation = false;
     myCurrentCommandHasChanges = false;
@@ -214,41 +194,53 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     myChangedFilesInCurrentCommand.clear();
   }
 
+  @Nullable
   private PlaceInfo getCurrentPlaceInfo() {
-    final Pair<FileEditor,FileEditorProvider> selectedEditorWithProvider = getSelectedEditor();
-    if (selectedEditorWithProvider != null) {
-      return createPlaceInfo(selectedEditorWithProvider.getFirst (), selectedEditorWithProvider.getSecond ());
+    FileEditorWithProvider selectedEditorWithProvider = getSelectedEditor();
+    if (selectedEditorWithProvider == null) {
+      return null;
+    }
+    return createPlaceInfo(selectedEditorWithProvider.getFileEditor(), selectedEditorWithProvider.getProvider());
+  }
+
+  @Nullable
+  private static PlaceInfo getPlaceInfoFromFocus() {
+    FileEditor fileEditor = new FocusBasedCurrentEditorProvider().getCurrentEditor();
+    if (fileEditor instanceof TextEditor && fileEditor.isValid()) {
+      VirtualFile file = fileEditor.getFile();
+      if (file != null) {
+        return new PlaceInfo(file,
+                             fileEditor.getState(FileEditorStateLevel.NAVIGATION),
+                             TextEditorProvider.getInstance().getEditorTypeId(),
+                             null);
+      }
     }
     return null;
   }
 
-  public final void onCommandFinished(Object commandGroupId) {
-    if (myCommandStartPlace != null) {
-      if (myCurrentCommandIsNavigation && myCurrentCommandHasMoves) {
-        if (!myBackInProgress) {
-          if (!CommandMerger.canMergeGroup(commandGroupId, myLastGroupId)) {
-            putLastOrMerge(myBackPlaces, myCommandStartPlace, BACK_QUEUE_LIMIT);
-          }
-          if (!myForwardInProgress) {
-            myForwardPlaces.clear();
-          }
-        }
-        removeInvalidFilesFromStacks();
-      }
-    }
+  final void onCommandFinished(Project project, Object commandGroupId) {
+    if (!CommandMerger.canMergeGroup(commandGroupId, myLastGroupId)) myRegisteredBackPlaceInLastGroup = false;
     myLastGroupId = commandGroupId;
 
+    if (myCommandStartPlace != null && myCurrentCommandIsNavigation && myCurrentCommandHasMoves) {
+      if (!myBackInProgress) {
+        if (!myRegisteredBackPlaceInLastGroup) {
+          myRegisteredBackPlaceInLastGroup = true;
+          putLastOrMerge(myCommandStartPlace, BACK_QUEUE_LIMIT, false);
+        }
+        if (!myForwardInProgress) {
+          myForwardPlaces.clear();
+        }
+      }
+      removeInvalidFilesFromStacks();
+    }
+
     if (myCurrentCommandHasChanges) {
-      setCurrentChangePlace();
+      setCurrentChangePlace(project == myProject);
     }
     else if (myCurrentCommandHasMoves) {
-      pushCurrentChangePlace();
+      myCurrentIndex = myChangePlaces.size();
     }
-  }
-
-
-  @Override
-  public final void projectClosed() {
   }
 
   @Override
@@ -258,50 +250,36 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
 
   @Override
   public final void includeCurrentPlaceAsChangePlace() {
-    setCurrentChangePlace();
-    pushCurrentChangePlace();
+    setCurrentChangePlace(false);
   }
 
-  private void setCurrentChangePlace() {
-    final Pair<FileEditor,FileEditorProvider> selectedEditorWithProvider = getSelectedEditor();
-    if (selectedEditorWithProvider == null) {
+  private void setCurrentChangePlace(boolean acceptPlaceFromFocus) {
+    PlaceInfo placeInfo = getCurrentPlaceInfo();
+    if (placeInfo != null && !myChangedFilesInCurrentCommand.contains(placeInfo.getFile())) {
+      placeInfo = null;
+    }
+    if (placeInfo == null && acceptPlaceFromFocus) {
+      placeInfo = getPlaceInfoFromFocus();
+    }
+    if (placeInfo != null && !myChangedFilesInCurrentCommand.contains(placeInfo.getFile())) {
+      placeInfo = null;
+    }
+    if (placeInfo == null) {
       return;
     }
-    final PlaceInfo placeInfo = createPlaceInfo(selectedEditorWithProvider.getFirst(), selectedEditorWithProvider.getSecond ());
 
-    final VirtualFile file = placeInfo.getFile();
-    if (myChangedFilesInCurrentCommand.contains(file)) {
-      myRecentlyChangedFiles.register(file);
+    myRecentlyChangedFiles.register(placeInfo.getFile());
 
-      myCurrentChangePlace = placeInfo;
-      if (!myChangePlaces.isEmpty()) {
-        final PlaceInfo lastInfo = myChangePlaces.get(myChangePlaces.size() - 1);
-        if (isSame(placeInfo, lastInfo)) {
-          myChangePlaces.removeLast();
-        }
-      }
-      myCurrentIndex = myStartIndex + myChangePlaces.size();
-    }
-  }
-
-  private void pushCurrentChangePlace() {
-    if (myCurrentChangePlace != null) {
-      myChangePlaces.add(myCurrentChangePlace);
-      if (myChangePlaces.size() > CHANGE_QUEUE_LIMIT) {
-        myChangePlaces.removeFirst();
-        myStartIndex++;
-      }
-      myCurrentChangePlace = null;
-    }
-    myCurrentIndex = myStartIndex + myChangePlaces.size();
+    putLastOrMerge(placeInfo, CHANGE_QUEUE_LIMIT, true);
+    myCurrentIndex = myChangePlaces.size();
   }
 
   @Override
   public VirtualFile[] getChangedFiles() {
-    List<VirtualFile> files = new ArrayList<VirtualFile>();
+    List<VirtualFile> files = new ArrayList<>();
 
     final LocalFileSystem lfs = LocalFileSystem.getInstance();
-    final List<String> paths = myRecentlyChangedFiles.getChangedFiles();
+    final List<String> paths = myRecentlyChangedFiles.CHANGED_PATHS;
     for (String path : paths) {
       final VirtualFile file = lfs.findFileByPath(path);
       if (file != null) {
@@ -309,26 +287,23 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
       }
     }
 
-    return VfsUtil.toVirtualFileArray(files);
+    return VfsUtilCore.toVirtualFileArray(files);
+  }
+
+  public boolean isRecentlyChanged(@NotNull VirtualFile file) {
+    return myRecentlyChangedFiles.CHANGED_PATHS.contains(file.getPath());
   }
 
   @Override
   public final void clearHistory() {
-    clearPlaceList(myBackPlaces);
-    clearPlaceList(myForwardPlaces);
-    clearPlaceList(myChangePlaces);
+    myBackPlaces.clear();
+    myForwardPlaces.clear();
+    myChangePlaces.clear();
 
     myLastGroupId = null;
 
-    myStartIndex = 0;
     myCurrentIndex = 0;
-    if (myCurrentChangePlace != null) {
-      myCurrentChangePlace = null;
-    }
-
-    if (myCommandStartPlace != null) {
-      myCommandStartPlace = null;
-    }
+    myCommandStartPlace = null;
   }
 
   @Override
@@ -338,23 +313,15 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     final PlaceInfo info = myBackPlaces.removeLast();
 
     PlaceInfo current = getCurrentPlaceInfo();
-    if (current != null) {
-      if (!isSame(current, info)) {
-        putLastOrMerge(myForwardPlaces, current, Integer.MAX_VALUE);
-      }
-    }
-    putLastOrMerge(myForwardPlaces, info, Integer.MAX_VALUE);
+    if (current != null) myForwardPlaces.add(current);
 
     myBackInProgress = true;
-
-    executeCommand(new Runnable() {
-      @Override
-      public void run() {
-        gotoPlaceInfo(info);
-      }
-    }, "", null);
-
-    myBackInProgress = false;
+    try {
+      executeCommand(() -> gotoPlaceInfo(info), "", null);
+    }
+    finally {
+      myBackInProgress = false;
+    }
   }
 
   @Override
@@ -365,13 +332,12 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     if (target == null) return;
 
     myForwardInProgress = true;
-    executeCommand(new Runnable() {
-      @Override
-      public void run() {
-        gotoPlaceInfo(target);
-      }
-    }, "", null);
-    myForwardInProgress = false;
+    try {
+      executeCommand(() -> gotoPlaceInfo(target), "", null);
+    }
+    finally {
+      myForwardInProgress = false;
+    }
   }
 
   private PlaceInfo getTargetForwardInfo() {
@@ -381,9 +347,10 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     PlaceInfo current = getCurrentPlaceInfo();
 
     while (!myForwardPlaces.isEmpty()) {
-      if (isSame(current, target)) {
+      if (current != null && isSame(current, target)) {
         target = myForwardPlaces.removeLast();
-      } else {
+      }
+      else {
         break;
       }
     }
@@ -403,36 +370,60 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   @Override
   public final void navigatePreviousChange() {
     removeInvalidFilesFromStacks();
-    if (myCurrentIndex == myStartIndex) return;
-    int index = myCurrentIndex - 1;
-    final PlaceInfo info = myChangePlaces.get(index - myStartIndex);
-
-    executeCommand(new Runnable() {
-      @Override
-      public void run() {
-        gotoPlaceInfo(info);
+    if (myCurrentIndex == 0) return;
+    PlaceInfo currentPlace = getCurrentPlaceInfo();
+    for (int i = myCurrentIndex - 1; i >= 0; i--) {
+      PlaceInfo info = myChangePlaces.get(i);
+      if (currentPlace == null || !isSame(currentPlace, info)) {
+        executeCommand(() -> gotoPlaceInfo(info), "", null);
+        myCurrentIndex = i;
+        break;
       }
-    }, "", null);
-    myCurrentIndex = index;
+    }
+  }
+
+  @Override
+  public List<PlaceInfo> getChangePlaces() {
+    return ContainerUtil.immutableList(myChangePlaces);
   }
 
   @Override
   public final boolean isNavigatePreviousChangeAvailable() {
-    return myCurrentIndex > myStartIndex;
+    return myCurrentIndex > 0;
   }
 
-  private void removeInvalidFilesFromStacks() {
+  void removeInvalidFilesFromStacks() {
     removeInvalidFilesFrom(myBackPlaces);
 
     removeInvalidFilesFrom(myForwardPlaces);
     if (removeInvalidFilesFrom(myChangePlaces)) {
-      myCurrentIndex = myStartIndex + myChangePlaces.size();
+      myCurrentIndex = myChangePlaces.size();
     }
   }
 
-  private static boolean removeInvalidFilesFrom(final LinkedList<PlaceInfo> backPlaces) {
+  @Override
+  public void navigateNextChange() {
+    removeInvalidFilesFromStacks();
+    if (myCurrentIndex >= myChangePlaces.size()) return;
+    PlaceInfo currentPlace = getCurrentPlaceInfo();
+    for (int i = myCurrentIndex; i < myChangePlaces.size(); i++) {
+      PlaceInfo info = myChangePlaces.get(i);
+      if (currentPlace == null || !isSame(currentPlace, info)) {
+        executeCommand(() -> gotoPlaceInfo(info), "", null);
+        myCurrentIndex = i + 1;
+        break;
+      }
+    }
+  }
+
+  @Override
+  public boolean isNavigateNextChangeAvailable() {
+    return myCurrentIndex < myChangePlaces.size();
+  }
+
+  private static boolean removeInvalidFilesFrom(@NotNull List<PlaceInfo> backPlaces) {
     boolean removed = false;
-    for (Iterator<PlaceInfo> iterator = backPlaces.iterator(); iterator.hasNext();) {
+    for (Iterator<PlaceInfo> iterator = backPlaces.iterator(); iterator.hasNext(); ) {
       PlaceInfo info = iterator.next();
       final VirtualFile file = info.myFile;
       if (!file.isValid()) {
@@ -440,24 +431,25 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
         removed = true;
       }
     }
-    
+
     return removed;
   }
 
-  private void gotoPlaceInfo(@NotNull PlaceInfo info) { // TODO: Msk
-    final boolean wasActive = myToolWindowManager.isEditorComponentActive();
+  @Override
+  public void gotoPlaceInfo(@NotNull PlaceInfo info) {
+    final boolean wasActive = ToolWindowManager.getInstance(myProject).isEditorComponentActive();
     EditorWindow wnd = info.getWindow();
-    final Pair<FileEditor[],FileEditorProvider[]> editorsWithProviders;
-    if (wnd != null && wnd.isValid()) {
-      editorsWithProviders = myEditorManager.openFileWithProviders(info.getFile(), wasActive, wnd);
-    } else {
-      editorsWithProviders = myEditorManager.openFileWithProviders(info.getFile(), wasActive, false);
-    }
+    FileEditorManagerEx editorManager = myFileEditorManager;
+    final Pair<FileEditor[], FileEditorProvider[]> editorsWithProviders = wnd != null && wnd.isValid()
+                                                                          ? editorManager.openFileWithProviders(info.getFile(), wasActive, wnd)
+                                                                          : editorManager.openFileWithProviders(info.getFile(), wasActive, false);
 
-    final FileEditor        [] editors   = editorsWithProviders.getFirst();
+    editorManager.setSelectedEditor(info.getFile(), info.getEditorTypeId());
+
+    final FileEditor[] editors = editorsWithProviders.getFirst();
     final FileEditorProvider[] providers = editorsWithProviders.getSecond();
     for (int i = 0; i < editors.length; i++) {
-      String typeId = providers [i].getEditorTypeId();
+      String typeId = providers[i].getEditorTypeId();
       if (typeId.equals(info.getEditorTypeId())) {
         editors[i].setState(info.getNavigationState());
       }
@@ -467,41 +459,40 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
   /**
    * @return currently selected FileEditor or null.
    */
-  protected Pair<FileEditor,FileEditorProvider> getSelectedEditor() {
-    VirtualFile file = myEditorManager.getCurrentFile();
-    return file != null ? myEditorManager.getSelectedEditorWithProvider(file) : null;
+  @Nullable
+  protected FileEditorWithProvider getSelectedEditor() {
+    FileEditorManagerEx editorManager = myFileEditorManager;
+    VirtualFile file = editorManager.getCurrentFile();
+    return file == null ? null : editorManager.getSelectedEditorWithProvider(file);
   }
 
-  private PlaceInfo createPlaceInfo(@NotNull final FileEditor fileEditor, final FileEditorProvider fileProvider) {
-    final VirtualFile file = myEditorManager.getFile(fileEditor);
+  protected PlaceInfo createPlaceInfo(@NotNull final FileEditor fileEditor, final FileEditorProvider fileProvider) {
+    if (!fileEditor.isValid()) {
+      return null;
+    }
+
+    FileEditorManagerEx editorManager = myFileEditorManager;
+    final VirtualFile file = editorManager.getFile(fileEditor);
     LOG.assertTrue(file != null);
-
-    final FileEditorState state = fileEditor.getState(FileEditorStateLevel.NAVIGATION);
-
-    return new PlaceInfo(file, state, fileProvider.getEditorTypeId(), myEditorManager.getCurrentWindow());
+    FileEditorState state = fileEditor.getState(FileEditorStateLevel.NAVIGATION);
+    return new PlaceInfo(file, state, fileProvider.getEditorTypeId(), editorManager.getCurrentWindow());
   }
 
-  private static void clearPlaceList(LinkedList<PlaceInfo> list) {
-    list.clear();
-  }
-
-
-  @Override
-  @NotNull
-  public final String getComponentName() {
-    return "IdeDocumentHistory";
-  }
-
-  private static void putLastOrMerge(LinkedList<PlaceInfo> list, PlaceInfo next, int limitSizeLimit) {
+  private void putLastOrMerge(@NotNull PlaceInfo next, int limit, boolean isChanged) {
+    LinkedList<PlaceInfo> list = isChanged ? myChangePlaces : myBackPlaces;
+    MessageBus messageBus = myProject.getMessageBus();
+    RecentPlacesListener listener = messageBus.syncPublisher(RecentPlacesListener.TOPIC);
     if (!list.isEmpty()) {
-      PlaceInfo prev = list.get(list.size() - 1);
+      PlaceInfo prev = list.getLast();
       if (isSame(prev, next)) {
-        list.removeLast();
+        PlaceInfo removed = list.removeLast();
+        listener.recentPlaceRemoved(removed, isChanged);
       }
     }
 
     list.add(next);
-    if (list.size() > limitSizeLimit) {
+    listener.recentPlaceAdded(next, isChanged);
+    if (list.size() > limit) {
       list.removeFirst();
     }
   }
@@ -513,24 +504,27 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     return myFileDocumentManager;
   }
 
-  private static final class PlaceInfo {
-
+  public static final class PlaceInfo {
     private final VirtualFile myFile;
     private final FileEditorState myNavigationState;
     private final String myEditorTypeId;
-    private WeakReference<EditorWindow> myWindow;
+    private final Reference<EditorWindow> myWindow;
 
-    public PlaceInfo(@NotNull VirtualFile file, FileEditorState navigationState, String editorTypeId, @Nullable EditorWindow window) {
+    public PlaceInfo(@NotNull VirtualFile file,
+                     @NotNull FileEditorState navigationState,
+                     @NotNull String editorTypeId,
+                     @Nullable EditorWindow window) {
       myNavigationState = navigationState;
       myFile = file;
       myEditorTypeId = editorTypeId;
-      myWindow = new WeakReference<EditorWindow>(window);
+      myWindow = new WeakReference<>(window);
     }
 
     public EditorWindow getWindow() {
       return myWindow.get();
     }
 
+    @NotNull
     public FileEditorState getNavigationState() {
       return myNavigationState;
     }
@@ -540,37 +534,33 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
       return myFile;
     }
 
+    @NotNull
     public String getEditorTypeId() {
       return myEditorTypeId;
     }
 
+    @Override
     public String toString() {
       return getFile().getName() + " " + getNavigationState();
     }
-
-  }
-
-  public LinkedList<PlaceInfo> getBackPlaces() {
-    return myBackPlaces;
-  }
-
-  public LinkedList<PlaceInfo> getForwardPlaces() {
-    return myForwardPlaces;
   }
 
   @Override
-  public final void initComponent() { }
+  @NotNull
+  public List<PlaceInfo> getBackPlaces() {
+    return ContainerUtil.immutableList(myBackPlaces);
+  }
 
   @Override
-  public final void disposeComponent() {
+  public final void dispose() {
     myLastGroupId = null;
   }
 
   protected void executeCommand(Runnable runnable, String name, Object groupId) {
-    myCmdProcessor.executeCommand(myProject, runnable, name, groupId);
+    CommandProcessor.getInstance().executeCommand(myProject, runnable, name, groupId);
   }
 
-  private static boolean isSame(PlaceInfo first, PlaceInfo second) {
+  public static boolean isSame(@NotNull PlaceInfo first, @NotNull PlaceInfo second) {
     if (first.getFile().equals(second.getFile())) {
       FileEditorState firstState = first.getNavigationState();
       FileEditorState secondState = second.getNavigationState();
@@ -580,5 +570,14 @@ public class IdeDocumentHistoryImpl extends IdeDocumentHistory implements Projec
     return false;
   }
 
+  /**
+   * {@link RecentPlacesListener} listens recently viewed or changed place adding and removing events.
+   */
+  public interface RecentPlacesListener {
+    Topic<RecentPlacesListener> TOPIC = Topic.create("RecentPlacesListener", RecentPlacesListener.class);
 
+    void recentPlaceAdded(@NotNull PlaceInfo changePlace, boolean isChanged);
+
+    void recentPlaceRemoved(@NotNull PlaceInfo changePlace, boolean isChanged);
+  }
 }
