@@ -1,5 +1,5 @@
 /*
- * Copyright 2000-2010 JetBrains s.r.o.
+ * Copyright 2000-2016 JetBrains s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,7 +27,6 @@ import com.intellij.openapi.fileTypes.StdFileTypes;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Key;
 import com.intellij.openapi.util.Pair;
-import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.psi.PsiFile;
@@ -38,6 +37,8 @@ import com.intellij.psi.xml.XmlFile;
 import com.intellij.psi.xml.XmlTag;
 import com.intellij.util.LocalTimeCounter;
 import com.intellij.util.xml.XmlName;
+import gnu.trove.THashMap;
+import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -53,23 +54,17 @@ import java.util.*;
  * Storage for user-defined tasks and data types
  * parsed from ant files
  * @author Eugene Zhuravlev
- *         Date: Jul 1, 2010
  */
 public class CustomAntElementsRegistry {
 
-  public static ThreadLocal<Boolean> ourIsBuildingClasspathForCustomTagLoading = new ThreadLocal<Boolean>() {
-    protected Boolean initialValue() {
-      return Boolean.FALSE;
-    }
-  };
+  public static final ThreadLocal<Boolean> ourIsBuildingClasspathForCustomTagLoading = ThreadLocal.withInitial(() -> Boolean.FALSE);
   private static final Logger LOG = Logger.getInstance("#com.intellij.lang.ant.dom.CustomAntElementsRegistry");
   private static final Key<CustomAntElementsRegistry> REGISTRY_KEY = Key.create("_custom_element_registry_");
 
-  private final Map<XmlName, Class> myCustomElements = new HashMap<XmlName, Class>();
-  private final Map<XmlName, String> myErrors = new HashMap<XmlName, String>();
-  private final Map<AntDomNamedElement, String> myTypeDefErrors = new HashMap<AntDomNamedElement, String>();
-  private final Map<XmlName, AntDomNamedElement> myDeclarations = new HashMap<XmlName, AntDomNamedElement>();
-  private final Map<String, ClassLoader> myNamedLoaders = new HashMap<String, ClassLoader>();
+  private final Map<XmlName, ClassProvider> myCustomElements = new THashMap<>();
+  private final Map<AntDomNamedElement, String> myTypeDefErrors = new THashMap<>();
+  private final Map<XmlName, AntDomNamedElement> myDeclarations = new THashMap<>();
+  private final Map<String, ClassLoader> myNamedLoaders = new THashMap<>();
 
   private CustomAntElementsRegistry(final AntDomProject antProject) {
     antProject.accept(new CustomTagDefinitionFinder(antProject));
@@ -88,13 +83,13 @@ public class CustomAntElementsRegistry {
   public Set<XmlName> getCompletionVariants(AntDomElement parentElement) {
     if (parentElement instanceof AntDomCustomElement) {
       // this case is already handled in AntDomExtender when defining children
-      return Collections.emptySet(); 
+      return Collections.emptySet();
     }
-    final Set<XmlName> result = new HashSet<XmlName>();
-    
+    final Set<XmlName> result = new HashSet<>();
+
     final Pair<AntDomMacroDef, AntDomScriptDef> contextMacroOrScriptDef = getContextMacroOrScriptDef(parentElement);
-    final AntDomMacroDef restrictToMacroDef = contextMacroOrScriptDef != null? contextMacroOrScriptDef.getFirst() : null;
-    final AntDomScriptDef restrictToScriptDef = contextMacroOrScriptDef != null? contextMacroOrScriptDef.getSecond() : null;
+    final AntDomMacroDef restrictToMacroDef = Pair.getFirst(contextMacroOrScriptDef);
+    final AntDomScriptDef restrictToScriptDef = Pair.getSecond(contextMacroOrScriptDef);
     final boolean parentIsDataType = parentElement.isDataType();
 
     for (final XmlName xmlName : myCustomElements.keySet()) {
@@ -122,13 +117,13 @@ public class CustomAntElementsRegistry {
         }
         if (declaringElement instanceof AntDomTypeDef) {
           final AntDomTypeDef typedef = (AntDomTypeDef)declaringElement;
-          final Class clazz = myCustomElements.get(xmlName);
+          final Class clazz = lookupClass(xmlName);
           if (clazz != null && typedef.isTask(clazz)) {
-            continue;                                                           
+            continue;
           }
         }
       }
-      
+
       result.add(xmlName);
     }
     return result;
@@ -138,15 +133,15 @@ public class CustomAntElementsRegistry {
   private Pair<AntDomMacroDef, AntDomScriptDef> getContextMacroOrScriptDef(AntDomElement element) {
     final AntDomMacroDef macrodef = element.getParentOfType(AntDomMacroDef.class, false);
     if (macrodef != null) {
-      return new Pair<AntDomMacroDef, AntDomScriptDef>(macrodef, null);
+      return new Pair<>(macrodef, null);
     }
     for (AntDomCustomElement custom = element.getParentOfType(AntDomCustomElement.class, false); custom != null; custom = custom.getParentOfType(AntDomCustomElement.class, true)) {
       final AntDomNamedElement declaring = getDeclaringElement(custom.getXmlName());
       if (declaring instanceof AntDomMacroDef) {
-        return new Pair<AntDomMacroDef, AntDomScriptDef>((AntDomMacroDef)declaring, null);
+        return new Pair<>((AntDomMacroDef)declaring, null);
       }
       else if (declaring instanceof AntDomScriptDef) {
-        return new Pair<AntDomMacroDef, AntDomScriptDef>(null, (AntDomScriptDef)declaring);
+        return new Pair<>(null, (AntDomScriptDef)declaring);
       }
     }
     return null;
@@ -158,37 +153,39 @@ public class CustomAntElementsRegistry {
     if (declaration == null) {
       return null;
     }
-    
+
     if (declaration instanceof AntDomMacrodefElement) {
       final Pair<AntDomMacroDef, AntDomScriptDef> contextMacroOrScriptDef = getContextMacroOrScriptDef(parentElement);
-      final AntDomMacroDef macrodefUsed = contextMacroOrScriptDef != null? contextMacroOrScriptDef.getFirst() : null;
+      final AntDomMacroDef macrodefUsed = Pair.getFirst(contextMacroOrScriptDef);
       if (macrodefUsed == null || !macrodefUsed.equals(declaration.getParentOfType(AntDomMacroDef.class, true))) {
         return null;
       }
     }
     else if (declaration instanceof AntDomScriptdefElement) {
       final Pair<AntDomMacroDef, AntDomScriptDef> contextMacroOrScriptDef = getContextMacroOrScriptDef(parentElement);
-      final AntDomScriptDef scriptDefUsed = contextMacroOrScriptDef != null? contextMacroOrScriptDef.getSecond() : null;
+      final AntDomScriptDef scriptDefUsed = Pair.getSecond(contextMacroOrScriptDef);
       if (scriptDefUsed == null || !scriptDefUsed.equals(declaration.getParentOfType(AntDomScriptDef.class, true))) {
         return null;
       }
     }
-    
+
     return declaration;
   }
 
   public AntDomNamedElement getDeclaringElement(XmlName customElementName) {
     return myDeclarations.get(customElementName);
   }
-  
+
   @Nullable
   public Class lookupClass(XmlName xmlName) {
-    return myCustomElements.get(xmlName);
+    final ClassProvider provider = myCustomElements.get(xmlName);
+    return provider == null ? null : provider.lookupClass();
   }
 
   @Nullable
   public String lookupError(XmlName xmlName) {
-    return myErrors.get(xmlName);
+    final ClassProvider provider = myCustomElements.get(xmlName);
+    return provider == null ? null : provider.getError();
   }
 
   public boolean hasTypeLoadingErrors(AntDomTypeDef typedef) {
@@ -196,14 +193,7 @@ public class CustomAntElementsRegistry {
     if (generalError != null) {
       return true;
     }
-    for (Map.Entry<XmlName, AntDomNamedElement> entry : myDeclarations.entrySet()) {
-      if (typedef.equals(entry.getValue())) {
-        if (myErrors.containsKey(entry.getKey()))  {
-          return true;
-        }
-      }
-    }
-    return false;
+    return StreamEx.ofKeys(myDeclarations, typedef::equals).anyMatch(name -> lookupError(name) != null);
   }
 
   public List<String> getTypeLoadingErrors(AntDomTypeDef typedef) {
@@ -214,21 +204,18 @@ public class CustomAntElementsRegistry {
     List<String> errors = null;
     for (Map.Entry<XmlName, AntDomNamedElement> entry : myDeclarations.entrySet()) {
       if (typedef.equals(entry.getValue())) {
-        final XmlName xmlName = entry.getKey();
-        if (myErrors.containsKey(xmlName))  {
-          final String err = myErrors.get(xmlName);
-          if (err != null) {
-            if (errors == null) {
-              errors = new ArrayList<String>();
-            }
-            errors.add(err);
+        final String err = lookupError(entry.getKey());
+        if (err != null)  {
+          if (errors == null) {
+            errors = new ArrayList<>();
           }
+          errors.add(err);
         }
       }
     }
-    return errors == null? Collections.<String>emptyList() : errors;
+    return errors == null ? Collections.emptyList() : errors;
   }
-  
+
   private void rememberNamedClassLoader(AntDomCustomClasspathComponent typedef, AntDomProject antProject) {
     final String loaderRef = typedef.getLoaderRef().getStringValue();
     if (loaderRef != null) {
@@ -238,11 +225,14 @@ public class CustomAntElementsRegistry {
     }
   }
 
-  @Nullable
+  @NotNull
   private ClassLoader getClassLoader(AntDomCustomClasspathComponent customComponent, AntDomProject antProject) {
     final String loaderRef = customComponent.getLoaderRef().getStringValue();
-    if (loaderRef != null && myNamedLoaders.containsKey(loaderRef)) {
-      return myNamedLoaders.get(loaderRef);
+    if (loaderRef != null) {
+      final ClassLoader loader = myNamedLoaders.get(loaderRef);
+      if (loader != null) {
+        return loader;
+      }
     }
     return createClassLoader(collectUrls(customComponent), antProject);
   }
@@ -277,42 +267,9 @@ public class CustomAntElementsRegistry {
     return factory.createFileFromText("_ant_dummy__." + fileType.getDefaultExtension(), fileType, builder, LocalTimeCounter.currentTime(), false, false);
   }
 
-  private void registerElement(AntDomNamedElement declaringElement, String customTagName, String nsUri, String classname, ClassLoader loader) {
-    Class clazz = null;
-    String error = null;
-    try {
-      clazz = loader.loadClass(classname);
-    }
-    catch (ClassNotFoundException e) {
-      error = "Class not found " + e.getMessage();
-      if (error == null) {
-        error = "";
-      }
-      clazz = null;
-    }
-    catch (NoClassDefFoundError e) {
-      error = "Class definition not found " + e.getMessage();
-      if (error == null) {
-        error = "";
-      }
-      clazz = null;
-    }
-    catch (UnsupportedClassVersionError e) {
-      error = "Unsupported class version " + e.getMessage();
-      if (error == null) {
-        error = "";
-      }
-      clazz = null;
-    }
-    addCustomDefinition(declaringElement, customTagName, nsUri, clazz, error);
-  }
-
-  private void addCustomDefinition(@NotNull AntDomNamedElement declaringTag, String customTagName, String nsUri, Class clazz, String error) {
+  private void addCustomDefinition(@NotNull AntDomNamedElement declaringTag, String customTagName, String nsUri, ClassProvider classProvider) {
     final XmlName xmlName = new XmlName(customTagName, nsUri == null? "" : nsUri);
-    if (error != null) {
-      myErrors.put(xmlName, error);
-    }
-    myCustomElements.put(xmlName, clazz);
+    myCustomElements.put(xmlName, classProvider);
     myDeclarations.put(xmlName, declaringTag);
   }
 
@@ -328,7 +285,7 @@ public class CustomAntElementsRegistry {
     return StringUtil.endsWithIgnoreCase(resourceOrFileName, ".xml");
   }
 
-  @Nullable
+  @NotNull
   public static ClassLoader createClassLoader(final List<URL> urls, final AntDomProject antProject) {
     final ClassLoader parentLoader = antProject.getClassLoader();
     if (urls.size() == 0) {
@@ -345,7 +302,7 @@ public class CustomAntElementsRegistry {
     }
 
     try {
-      final List<URL> urls = new ArrayList<URL>();
+      final List<URL> urls = new ArrayList<>();
       // check classpath attribute
       final List<File> cpFiles = typedef.getClasspath().getValue();
       if (cpFiles != null) {
@@ -359,7 +316,7 @@ public class CustomAntElementsRegistry {
         }
       }
 
-      final HashSet<AntFilesProvider> processed = new HashSet<AntFilesProvider>();
+      final HashSet<AntFilesProvider> processed = new HashSet<>();
       final AntDomElement referencedPath = typedef.getClasspathRef().getValue();
       if (referencedPath instanceof AntFilesProvider) {
         for (File cpFile : ((AntFilesProvider)referencedPath).getFiles(processed)) {
@@ -372,7 +329,7 @@ public class CustomAntElementsRegistry {
         }
       }
       // check nested elements
-      
+
       for (final Iterator<AntDomElement> it = typedef.getAntChildrenIterator(); it.hasNext();) {
         AntDomElement child = it.next();
         if (child instanceof AntFilesProvider) {
@@ -397,25 +354,19 @@ public class CustomAntElementsRegistry {
   }
 
   private static URL toLocalURL(final File file) throws MalformedURLException {
-    String path = FileUtil.toSystemIndependentName(file.getPath());
-    if (!(StringUtil.endsWithIgnoreCase(path, ".jar") || StringUtil.endsWithIgnoreCase(path, ".zip")) && file.isDirectory()) {
-      if (!path.endsWith("/")) {
-        path = path + "/";
-      }
-    }
-    return new URL("file", "", path);
+    return file.toURI().toURL();
   }
 
-
   private class CustomTagDefinitionFinder extends AntDomRecursiveVisitor {
-    private final Set<AntDomElement> myElementsOnThePath = new HashSet<AntDomElement>();
-    private final Set<String> processedAntlibs = new HashSet<String>();
+    private final Set<AntDomElement> myElementsOnThePath = new HashSet<>();
+    private final Set<String> processedAntlibs = new HashSet<>();
     private final AntDomProject myAntProject;
 
-    public CustomTagDefinitionFinder(AntDomProject antProject) {
+    CustomTagDefinitionFinder(AntDomProject antProject) {
       myAntProject = antProject;
     }
 
+    @Override
     public void visitAntDomElement(AntDomElement element) {
       if (element instanceof AntDomCustomElement || myElementsOnThePath.contains(element)) {
         return; // avoid stack overflow
@@ -457,27 +408,29 @@ public class CustomAntElementsRegistry {
       }
     }
 
+    @Override
     public void visitMacroDef(AntDomMacroDef macrodef) {
       final String customTagName = macrodef.getName().getStringValue();
       if (customTagName != null) {
         final String nsUri = macrodef.getUri().getStringValue();
-        addCustomDefinition(macrodef, customTagName, nsUri, null, null);
+        addCustomDefinition(macrodef, customTagName, nsUri, ClassProvider.EMPTY);
         for (AntDomMacrodefElement element : macrodef.getMacroElements()) {
           final String customSubTagName = element.getName().getStringValue();
           if (customSubTagName != null) {
-            addCustomDefinition(element, customSubTagName, nsUri, null, null);
+            addCustomDefinition(element, customSubTagName, nsUri, ClassProvider.EMPTY);
           }
         }
       }
     }
 
+    @Override
     public void visitScriptDef(AntDomScriptDef scriptdef) {
       final String customTagName = scriptdef.getName().getStringValue();
       if (customTagName != null) {
         final String nsUri = scriptdef.getUri().getStringValue();
         final ClassLoader classLoader = getClassLoader(scriptdef, myAntProject);
         // register the scriptdef
-        addCustomDefinition(scriptdef, customTagName, nsUri, null, null);
+        addCustomDefinition(scriptdef, customTagName, nsUri, ClassProvider.EMPTY);
         // registering nested elements
         ReflectedProject reflectedProject = null;
         for (AntDomScriptdefElement element : scriptdef.getScriptdefElements()) {
@@ -485,13 +438,13 @@ public class CustomAntElementsRegistry {
           if (customSubTagName != null) {
             final String classname = element.getClassname().getStringValue();
             if (classname != null) {
-              registerElement(element, customTagName, nsUri, classname, classLoader);
+              addCustomDefinition(element, customTagName, nsUri, ClassProvider.create(classname, classLoader));
             }
             else {
               Class clazz = null;
               final String typeName = element.getElementType().getStringValue();
               if (typeName != null) {
-                clazz = myCustomElements.get(new XmlName(typeName));
+                clazz = lookupClass(new XmlName(typeName));
                 if (clazz == null) {
                   if (reflectedProject == null) { // lazy init
                     reflectedProject = ReflectedProject.getProject(myAntProject.getClassLoader());
@@ -508,31 +461,35 @@ public class CustomAntElementsRegistry {
                   }
                 }
               }
-              addCustomDefinition(element, customSubTagName, nsUri, clazz, null);
+              addCustomDefinition(element, customSubTagName, nsUri, ClassProvider.create(clazz));
             }
           }
         }
       }
     }
 
+    @Override
     public void visitPresetDef(AntDomPresetDef presetdef) {
       final String customTagName = presetdef.getName().getStringValue();
       if (customTagName != null) {
         final String nsUri = presetdef.getUri().getStringValue();
-        addCustomDefinition(presetdef, customTagName, nsUri, null, null);
+        addCustomDefinition(presetdef, customTagName, nsUri, ClassProvider.EMPTY);
       }
     }
 
+    @Override
     public void visitTypeDef(AntDomTypeDef typedef) {
       // if loaderRef attribute is specified, make sure the loader is built and stored
       rememberNamedClassLoader(typedef, myAntProject);
       defineCustomElements(typedef, myAntProject);
     }
 
+    @Override
     public void visitInclude(AntDomInclude includeTag) {
       processInclude(includeTag);
     }
 
+    @Override
     public void visitImport(AntDomImport importTag) {
       processInclude(importTag);
     }
@@ -553,7 +510,7 @@ public class CustomAntElementsRegistry {
       final String classname = typedef.getClassName().getStringValue();
 
       if (classname != null && customTagName != null) {
-        registerElement(typedef, customTagName, uri, classname, getClassLoader(typedef, antProject));
+        addCustomDefinition(typedef, customTagName, uri, ClassProvider.create(classname, getClassLoader(typedef, antProject)));
       }
       else {
         defineCustomElementsFromResources(typedef, uri, antProject, null);
@@ -574,24 +531,22 @@ public class CustomAntElementsRegistry {
         if (loader == null) {
           loader = getClassLoader(typedef, antProject);
         }
-        if (loader != null) {
-          final InputStream stream = loader.getResourceAsStream(resource);
-          if (stream != null) {
-            try {
-              if (isXmlFormat(typedef, resource)) {
-                xmlFile = (XmlFile)loadContentAsFile(project, stream, StdFileTypes.XML);
-              }
-              else {
-                propFile = (PropertiesFile)loadContentAsFile(project, stream, StdFileTypes.PROPERTIES);
-              }
+        final InputStream stream = loader.getResourceAsStream(resource);
+        if (stream != null) {
+          try {
+            if (isXmlFormat(typedef, resource)) {
+              xmlFile = (XmlFile)loadContentAsFile(project, stream, StdFileTypes.XML);
             }
-            catch (IOException e) {
-              LOG.info(e);
+            else {
+              propFile = (PropertiesFile)loadContentAsFile(project, stream, StdFileTypes.PROPERTIES);
             }
           }
-          else {
-            myTypeDefErrors.put(typedef, "Resource \"" + resource + "\" not found in the classpath");
+          catch (IOException e) {
+            LOG.info(e);
           }
+        }
+        else {
+          myTypeDefErrors.put(typedef, "Resource \"" + resource + "\" not found in the classpath");
         }
       }
       else {
@@ -611,7 +566,7 @@ public class CustomAntElementsRegistry {
           loader = getClassLoader(typedef, antProject);
         }
         for (final IProperty property : propFile.getProperties()) {
-          registerElement(typedef, property.getUnescapedKey(), uri, property.getValue(), loader);
+          addCustomDefinition(typedef, property.getUnescapedKey(), uri, ClassProvider.create(property.getUnescapedValue(), loader));
         }
       }
 
@@ -626,7 +581,7 @@ public class CustomAntElementsRegistry {
     private void loadDefinitionsFromAntlib(XmlFile xmlFile, String uri, ClassLoader loader, @Nullable AntDomTypeDef typedef, AntDomProject antProject) {
       final AntDomAntlib antLib = AntSupport.getAntLib(xmlFile);
       if (antLib != null) {
-        final List<AntDomTypeDef> defs = new ArrayList<AntDomTypeDef>();
+        final List<AntDomTypeDef> defs = new ArrayList<>();
         defs.addAll(antLib.getTaskdefs());
         defs.addAll(antLib.getTypedefs());
         if (!defs.isEmpty()) {
@@ -634,7 +589,8 @@ public class CustomAntElementsRegistry {
             final String tagName = def.getName().getStringValue();
             final String className = def.getClassName().getStringValue();
             if (tagName != null && className != null) {
-              registerElement(typedef != null? typedef : def, tagName, uri, className, loader);
+              AntDomNamedElement declaringElement = typedef != null? typedef : def;
+              addCustomDefinition(declaringElement, tagName, uri, ClassProvider.create(className, loader));
             }
             else {
               defineCustomElementsFromResources(def, uri, antProject, loader);
